a 	new file:   common/autonomous_states/KR_governorates.txt 	modified:   common/game_rules/game_rules_country_paths.txt 	modified:   events/Shandong_Clique.txt 	modified:   history/countries/SQI - Shandong.txt 	modified:   interface/HNN_game_rules_flags.gfx 	modified:   localisation/HNN_superevents_l_simp_chinese.yml 	modified:   localisation/KR_Fengtian_l_simp_chinese.yml 	modified:   localisation/KR_Shandong_l_simp_chinese.yml 	modified:   localisation/KR_Shanxi_l_simp_chinese.yml 	modified:   localisation/KR_game_rules_l_simp_chinese.yml 	modified:   localisation/KX_Guides_gui_l_simp_chinese.yml 	modified:   "\346\226\260\345\273\272\346\226\207\346\234\254\346\226\207\346\241\243.txt"

--- a/localisation/HNN_superevents_l_simp_chinese.yml
+++ b/localisation/HNN_superevents_l_simp_chinese.yml
@@ -85,3 +85,4 @@
  COUNTRY_governorate_DEF: "$NONIDEOLOGYDEF$"
  COUNTRY_integrated_governorate: "$NONIDEOLOGY$"
  COUNTRY_integrated_governorate_DEF: "$NONIDEOLOGYDEF$"
+ cannot_change_autonomy_manually: "§R无法手动改变自治等级§!"
