--- a/localisation/KR_Fengtian_l_simp_chinese.yml
+++ b/localisation/KR_Fengtian_l_simp_chinese.yml
@@ -3351,6 +3351,7 @@
  FNG_naval_adjustment_quality: "海军换代：质量"
  FNG_naval_adjustment_quantity: "海军换代：数量"
  filling_FNG_silver: "充盈白银储备"
+ FNG_sino_japanese_currency_union_desc: "我们的经济已完全融入了共荣圈当中，接下来自当加入日元集团，把奉天大洋的价值直接同日元相绑定，让经济乘上东京的快车，吃上贸易和投资的红利。"
 
 #KR军事
  FNG_Fengtian_Army_1: "军中弊病"
