--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -13,7 +13,7 @@
  SQI_market_liberal_party:0 "一心天道龙华会"
  SQI_market_liberal_party_long:0 "一心天道龙华会(Yixin Tiandao Longhua Hui)\n§g在邹平郊外建立的一心天道龙华圣教会，是那个年代能吸引一批绿林好汉的组织，它的建立者马士伟希望把几个都信仰先天道的团体集合起来共同改善山东的福利状况。只有在作为西方观察者和干涉者们对于一贯道潜在的军国主义以及皈一道的福利思想的替代品之时，它才被认为是一个政治团体。§!"
  SQI_social_conservative_party:0 "归仁会"
- SQI_social_conservative_party_long:0 "归仁会(Guiren Hui)\n§g百年以来屈辱的动荡只是山东悠久历史的一部分，许多山东人认为启蒙是摆脱屈辱的唯一途径，但另一些人在其短暂生命之中寻求主宰。杨树林的支持者反对上世纪西方所带来的一切变化，张宗昌搞得毒品交易为山东百姓所耻笑，更不必说张宗昌这人所展现的粗鄙和无耻。对很多山东百姓来说，大清之过不在于君主制，而在过度迁就张宗昌这个混蛋。因此，杨树林对大清的公开承诺得到了鲁东南地区的响应，他们希望重新回到在威海和青岛的故土。§!"
+ SQI_social_conservative_party_long:0 "归仁会(Guiren Hui)\n§g百年以来屈辱的动荡只是山东悠久历史的一部分，许多山东人认为启蒙是摆脱屈辱的唯一途径，但另一些人在其短暂生命之中寻求主宰。屈映光的支持者反对上世纪西方所带来的一切变化，张宗昌搞得毒品交易为山东百姓所耻笑，更不必说张宗昌这人所展现的粗鄙和无耻。对很多山东百姓来说，大清之过不在于君主制，而在过度迁就张宗昌这个混蛋。因此，屈映光对大清的公开承诺得到了鲁东南地区的响应，他们希望重新回到在威海和青岛的故土。§!"
  SQI_authoritarian_democrat_party:0 "张宗昌派"
  SQI_authoritarian_democrat_party_long:0 "张宗昌派(Zhangzhongchang Pai)\n§g张宗昌所部在1925年前后进驻山东并长期割据于此，尽管他试图在第四次直奉战争中两不相帮来换取吴佩孚对其割据山东的许可。但直系要人靳云鹗的先斩后奏打破了这一切，张宗昌灰溜溜的被赶出了济南，部下也被靳云鹗收编，他不得不流亡青岛。但他从没有放弃自己的野心，在与张天然的会面后二人达成了协议，他们将为了推翻靳云鹗而合作。§!"
  SQI_paternal_autocrat_party:0 "靳云鹗派"
