--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -2,6 +2,177 @@
  Shanxi_Yan_Xishan:0 "晋系国策树"
  Shanxi_Feng_Yuxiang:0 "国民军国策树"
 
+ SHX: "山西"
+ SHX_ADJ: "山西"
+ SHX_DEF: "山西"
+ SHX_totalist: "晋系军阀"
+ SHX_totalist_DEF: "晋系军阀"
+ SHX_syndicalist: "晋系军阀"
+ SHX_syndicalist_DEF: "晋系军阀"
+ SHX_radical_socialist: "晋系军阀"
+ SHX_radical_socialist_DEF: "晋系军阀"
+ SHX_social_democrat: "山西"
+ SHX_social_democrat_DEF: "晋系军阀"
+ SHX_social_liberal: "山西"
+ SHX_social_liberal_DEF: "晋系军阀"
+ SHX_market_liberal: "山西"
+ SHX_market_liberal_DEF: "晋系军阀"
+ SHX_social_conservative: "山西"
+ SHX_social_conservative_DEF: "晋系军阀"
+ SHX_authoritarian_democrat: "国民军"
+ SHX_authoritarian_democrat_DEF: "国民军"
+ SHX_paternal_autocrat: "晋系军阀"
+ SHX_paternal_autocrat_DEF: "晋系军阀"
+ SHX_national_populist: "晋系军阀"
+ SHX_national_populist_DEF: "晋系军阀"
+ SHX_NCPC: "西北政务委员会"
+ SHX_NCPC_ADJ: "西北政务委员会"
+ SHX_NCPC_DEF: "西北政务委员会"
+ SHX_NCPC_totalist: "西北政务委员会"
+ SHX_NCPC_totalist_ADJ: "西北政务委员会"
+ SHX_NCPC_totalist_DEF: "西北政务委员会"
+ SHX_NCPC_syndicalist: "西北政务委员会"
+ SHX_NCPC_syndicalist_ADJ: "西北政务委员会"
+ SHX_NCPC_syndicalist_DEF: "西北政务委员会"
+ SHX_NCPC_radical_socialist: "西北政务委员会"
+ SHX_NCPC_radical_socialist_ADJ: "西北政务委员会"
+ SHX_NCPC_radical_socialist_DEF: "西北政务委员会"
+ SHX_NCPC_social_democrat: "西北政务委员会"
+ SHX_NCPC_social_democrat_ADJ: "西北政务委员会"
+ SHX_NCPC_social_democrat_DEF: "西北政务委员会"
+ SHX_NCPC_social_liberal: "西北政务委员会"
+ SHX_NCPC_social_liberal_ADJ: "西北政务委员会"
+ SHX_NCPC_social_liberal_DEF: "西北政务委员会"
+ SHX_NCPC_market_liberal: "西北政务委员会"
+ SHX_NCPC_market_liberal_ADJ: "西北政务委员会"
+ SHX_NCPC_market_liberal_DEF: "西北政务委员会"
+ SHX_NCPC_social_conservative: "西北政务委员会"
+ SHX_NCPC_social_conservative_ADJ: "西北政务委员会"
+ SHX_NCPC_social_conservative_DEF: "西北政务委员会"
+ SHX_NCPC_authoritarian_democrat: "西北政务委员会"
+ SHX_NCPC_authoritarian_democrat_ADJ: "西北政务委员会"
+ SHX_NCPC_authoritarian_democrat_DEF: "西北政务委员会"
+ SHX_NCPC_paternal_autocrat: "西北政务委员会"
+ SHX_NCPC_paternal_autocrat_ADJ: "西北政务委员会"
+ SHX_NCPC_paternal_autocrat_DEF: "西北政务委员会"
+ SHX_NCPC_national_populist: "西北政务委员会"
+ SHX_NCPC_national_populist_ADJ: "西北政务委员会"
+ SHX_NCPC_national_populist_DEF: "西北政务委员会"
+ SHX_QIE_totalist:0 "山西"
+ SHX_QIE_totalist_ADJ:0 "山西"
+ SHX_QIE_totalist_DEF:0 "山西"
+ SHX_QIE_syndicalist:0 "山西"
+ SHX_QIE_syndicalist_ADJ:0 "山西"
+ SHX_QIE_syndicalist_DEF:0 "山西"
+ SHX_QIE_radical_socialist:0 "山西"
+ SHX_QIE_radical_socialist_ADJ:0 "山西"
+ SHX_QIE_radical_socialist_DEF:0 "山西"
+ SHX_QIE_social_democrat:0 "山西"
+ SHX_QIE_social_democrat_ADJ:0 "山西"
+ SHX_QIE_social_democrat_DEF:0 "山西"
+ SHX_QIE_social_liberal:0 "山西"
+ SHX_QIE_social_liberal_ADJ:0 "山西"
+ SHX_QIE_social_liberal_DEF:0 "山西"
+ SHX_QIE_market_liberal:0 "山西"
+ SHX_QIE_market_liberal_ADJ:0 "山西"
+ SHX_QIE_market_liberal_DEF:0 "山西"
+ SHX_QIE_social_conservative:0 "山西"
+ SHX_QIE_social_conservative_ADJ:0 "山西"
+ SHX_QIE_social_conservative_DEF:0 "山西"
+ SHX_QIE_authoritarian_democrat:0 "山西"
+ SHX_QIE_authoritarian_democrat_ADJ:0 "山西"
+ SHX_QIE_authoritarian_democrat_DEF:0 "山西"
+ SHX_QIE_paternal_autocrat:0 "山西"
+ SHX_QIE_paternal_autocrat_ADJ:0 "山西"
+ SHX_QIE_paternal_autocrat_DEF:0 "山西"
+ SHX_QIE_national_populist:0 "山西"
+ SHX_QIE_national_populist_ADJ:0 "山西"
+ SHX_QIE_national_populist_DEF:0 "山西"
+ SHX_KMT_totalist:0 "山西"
+ SHX_KMT_totalist_ADJ:0 "山西"
+ SHX_KMT_totalist_DEF:0 "山西"
+ SHX_KMT_syndicalist:0 "山西"
+ SHX_KMT_syndicalist_ADJ:0 "山西"
+ SHX_KMT_syndicalist_DEF:0 "山西"
+ SHX_KMT_radical_socialist:0 "山西"
+ SHX_KMT_radical_socialist_ADJ:0 "山西"
+ SHX_KMT_radical_socialist_DEF:0 "山西"
+ SHX_KMT_social_democrat:0 "山西"
+ SHX_KMT_social_democrat_ADJ:0 "山西"
+ SHX_KMT_social_democrat_DEF:0 "山西"
+ SHX_KMT_social_liberal:0 "山西"
+ SHX_KMT_social_liberal_ADJ:0 "山西"
+ SHX_KMT_social_liberal_DEF:0 "山西"
+ SHX_KMT_market_liberal:0 "山西"
+ SHX_KMT_market_liberal_ADJ:0 "山西"
+ SHX_KMT_market_liberal_DEF:0 "山西"
+ SHX_KMT_social_conservative:0 "山西"
+ SHX_KMT_social_conservative_ADJ:0 "山西"
+ SHX_KMT_social_conservative_DEF:0 "山西"
+ SHX_KMT_authoritarian_democrat:0 "山西"
+ SHX_KMT_authoritarian_democrat_ADJ:0 "山西"
+ SHX_KMT_authoritarian_democrat_DEF:0 "山西"
+ SHX_KMT_paternal_autocrat:0 "山西"
+ SHX_KMT_paternal_autocrat_ADJ:0 "山西"
+ SHX_KMT_paternal_autocrat_DEF:0 "山西"
+ SHX_KMT_national_populist:0 "山西"
+ SHX_KMT_national_populist_ADJ:0 "山西"
+ SHX_KMT_national_populist_DEF:0 "山西"
+ SHX_zhongyuan_gov: "中原政府"
+ SHX_zhongyuan_gov_ADJ: "中原"
+ SHX_zhongyuan_gov_DEF: "中原政府"
+ SHX_united_china_feng_flag: "中华民国"
+ SHX_united_china_feng_flag_ADJ: "中国"
+ SHX_united_china_feng_flag_DEF: "中华民国"
+ SHX_authoritarian_democrat_associated_governorate: "陕西"
+ SHX_authoritarian_democrat_associated_governorate_DEF: "陕西"
+ SHX_authoritarian_democrat_associated_governorate_ADJ: "陕西"
+ SHX_authoritarian_democrat_autonomous_governorate: "陕西"
+ SHX_authoritarian_democrat_autonomous_governorate_DEF: "陕西"
+ SHX_authoritarian_democrat_autonomous_governorate_ADJ: "陕西"
+ SHX_authoritarian_democrat_governorate: "陕西"
+ SHX_authoritarian_democrat_governorate_DEF: "陕西"
+ SHX_authoritarian_democrat_governorate_ADJ: "陕西"
+ SHX_authoritarian_democrat_integrated_governorate: "陕西"
+ SHX_authoritarian_democrat_integrated_governorate_DEF: "陕西"
+ SHX_authoritarian_democrat_integrated_governorate_ADJ: "陕西"
+ SHX_KMT_authoritarian_democrat_associated_governorate: "陕西"
+ SHX_KMT_authoritarian_democrat_associated_governorate_DEF: "陕西"
+ SHX_KMT_authoritarian_democrat_associated_governorate_ADJ: "陕西"
+ SHX_KMT_authoritarian_democrat_autonomous_governorate: "陕西"
+ SHX_KMT_authoritarian_democrat_autonomous_governorate_DEF: "陕西"
+ SHX_KMT_authoritarian_democrat_autonomous_governorate_ADJ: "陕西"
+ SHX_KMT_authoritarian_democrat_governorate: "陕西"
+ SHX_KMT_authoritarian_democrat_governorate_DEF: "陕西"
+ SHX_KMT_authoritarian_democrat_governorate_ADJ: "陕西"
+ SHX_KMT_authoritarian_democrat_integrated_governorate: "陕西"
+ SHX_KMT_authoritarian_democrat_integrated_governorate_DEF: "陕西"
+ SHX_KMT_authoritarian_democrat_integrated_governorate_ADJ: "陕西"
+ SHX_NCPC_associated_governorate: "西北政务委员会"
+ SHX_NCPC_associated_governorate_DEF: "西北政务委员会"
+ SHX_NCPC_associated_governorate_ADJ: "西北政务委员会"
+ SHX_NCPC_autonomous_governorate: "西北政务委员会"
+ SHX_NCPC_autonomous_governorate_DEF: "西北政务委员会"
+ SHX_NCPC_autonomous_governorate_ADJ: "西北政务委员会"
+ SHX_NCPC_governorate: "西北政务委员会"
+ SHX_NCPC_governorate_DEF: "西北政务委员会"
+ SHX_NCPC_governorate_ADJ: "西北政务委员会"
+ SHX_NCPC_integrated_governorate: "西北政务委员会"
+ SHX_NCPC_integrated_governorate_DEF: "西北政务委员会"
+ SHX_NCPC_integrated_governorate_ADJ: "西北政务委员会"
+ SHX_NCPC_KMT_associated_governorate: "西北政务委员会"
+ SHX_NCPC_KMT_associated_governorate_DEF: "西北政务委员会"
+ SHX_NCPC_KMT_associated_governorate_ADJ: "西北政务委员会"
+ SHX_NCPC_KMT_autonomous_governorate: "西北政务委员会"
+ SHX_NCPC_KMT_autonomous_governorate_DEF: "西北政务委员会"
+ SHX_NCPC_KMT_autonomous_governorate_ADJ: "西北政务委员会"
+ SHX_NCPC_KMT_governorate: "西北政务委员会"
+ SHX_NCPC_KMT_governorate_DEF: "西北政务委员会"
+ SHX_NCPC_KMT_governorate_ADJ: "西北政务委员会"
+ SHX_NCPC_KMT_integrated_governorate: "西北政务委员会"
+ SHX_NCPC_KMT_integrated_governorate_DEF: "西北政务委员会"
+ SHX_NCPC_KMT_integrated_governorate_ADJ: "西北政务委员会"
+
  SHX_totalist_party:0 "山西牺牲救国同盟会"
  SHX_totalist_party_long:0 "山西牺牲救国同盟会(Shanxi Sacrifice for the Nation Alliance)\n§g自1925年北伐战争开始后，山西省内的左翼开始活跃起来与远在南方的国民党和亲近左翼的冯玉祥和他的国民军一起联合起来抵抗北洋政府。随着北伐战争的失利，山西省境内的国民党开始分裂。以俞心清为首的支持宋庆龄的一派获得了民心并和省内的工团党支部一起退居太行山中的昔阳县大寨村，而胡景通为首的拥汪派则流亡海外。1932年上海起义后潜伏大寨村的三股山西左翼势力分别是俞心清领导的国民党-临委会、彭真领导的工团党山西支部和贾进财及陈永贵等本地农民联合创建的农业社会主义组织社会革命联盟合并为了一个全新的左翼组织即山西牺牲救国同盟会，牺盟会成立后，开始在全山西省内宣传左翼思想、组织民团并在学生中取得了一定的影响力。在牺盟会的领导下，山西的社会主义者正在逐步壮大之中。§!"
  SHX_syndicalist_party:0 "山西牺牲救国同盟会"
@@ -299,6 +470,10 @@
  SHX_model_governor_desc:0 "阎锡山能得到这一绰号要归功于段祺瑞，同时他对媒体（通常是国际媒体）面前的表演也为他赢得了一些声誉。他亲自指挥战斗的行为也为他博取了不少关注，也许让他当这个领袖是最合适的选择。"
  SHX_christian_general:0 "基督将军"
  SHX_christian_general_desc:0 "冯玉祥的绰号来自于他的基督教信仰和他用基督教道德观激励手下士兵的行为。冯玉祥本人就是国民军精神的具现。虽然他对基督教的虔诚和他对教义的理解深度备受争议，却也从未动摇他的热忱。"
+ SHX_gmj_officer: "国民军将领"
+ SHX_gmj_officer_desc: "§L该名将领隶属于冯玉祥的国民军。§!"
+ SHX_yan_loyalist: "晋军将领"
+ SHX_yan_loyalist_desc: "§L该名将领隶属于阎锡山的晋军。§!"
 
  SHX_model_governor_tt: "修正§Y阎锡山§!：\n$MODIFIER_COMMAND_POWER_GAIN_MULT$：§G+25%§!"
  shx_education_yan_path: "§L山西决定高等教育优先§!"
@@ -1335,71 +1510,3 @@
  SHX_Industrial_Innovation_desc:0 "创新对正在进行工业化的国家而言十分重要，我们绝不能对此视而不见。我们应该寻求通过更加创新的手段实现生产能力的最大化。"
  SHX_Mountain_Warfare:0 "山地战术"
  SHX_Mountain_Warfare_desc:0 "山西是一个多山的省份，我们必须学会如何在这种环境下打好仗。可以请有经验的登山者来教士兵如何更好地在山地作战。"
- SHX_QIE_totalist:0 "山西"
- SHX_QIE_totalist_ADJ:0 "山西"
- SHX_QIE_totalist_DEF:0 "山西"
- SHX_QIE_syndicalist:0 "山西"
- SHX_QIE_syndicalist_ADJ:0 "山西"
- SHX_QIE_syndicalist_DEF:0 "山西"
- SHX_QIE_radical_socialist:0 "山西"
- SHX_QIE_radical_socialist_ADJ:0 "山西"
- SHX_QIE_radical_socialist_DEF:0 "山西"
- SHX_QIE_social_democrat:0 "山西"
- SHX_QIE_social_democrat_ADJ:0 "山西"
- SHX_QIE_social_democrat_DEF:0 "山西"
- SHX_QIE_social_liberal:0 "山西"
- SHX_QIE_social_liberal_ADJ:0 "山西"
- SHX_QIE_social_liberal_DEF:0 "山西"
- SHX_QIE_market_liberal:0 "山西"
- SHX_QIE_market_liberal_ADJ:0 "山西"
- SHX_QIE_market_liberal_DEF:0 "山西"
- SHX_QIE_social_conservative:0 "山西"
- SHX_QIE_social_conservative_ADJ:0 "山西"
- SHX_QIE_social_conservative_DEF:0 "山西"
- SHX_QIE_authoritarian_democrat:0 "山西"
- SHX_QIE_authoritarian_democrat_ADJ:0 "山西"
- SHX_QIE_authoritarian_democrat_DEF:0 "山西"
- SHX_QIE_paternal_autocrat:0 "山西"
- SHX_QIE_paternal_autocrat_ADJ:0 "山西"
- SHX_QIE_paternal_autocrat_DEF:0 "山西"
- SHX_QIE_national_populist:0 "山西"
- SHX_QIE_national_populist_ADJ:0 "山西"
- SHX_QIE_national_populist_DEF:0 "山西"
- SHX_KMT_totalist:0 "山西"
- SHX_KMT_totalist_ADJ:0 "山西"
- SHX_KMT_totalist_DEF:0 "山西"
- SHX_KMT_syndicalist:0 "山西"
- SHX_KMT_syndicalist_ADJ:0 "山西"
- SHX_KMT_syndicalist_DEF:0 "山西"
- SHX_KMT_radical_socialist:0 "山西"
- SHX_KMT_radical_socialist_ADJ:0 "山西"
- SHX_KMT_radical_socialist_DEF:0 "山西"
- SHX_KMT_social_democrat:0 "山西"
- SHX_KMT_social_democrat_ADJ:0 "山西"
- SHX_KMT_social_democrat_DEF:0 "山西"
- SHX_KMT_social_liberal:0 "山西"
- SHX_KMT_social_liberal_ADJ:0 "山西"
- SHX_KMT_social_liberal_DEF:0 "山西"
- SHX_KMT_market_liberal:0 "山西"
- SHX_KMT_market_liberal_ADJ:0 "山西"
- SHX_KMT_market_liberal_DEF:0 "山西"
- SHX_KMT_social_conservative:0 "山西"
- SHX_KMT_social_conservative_ADJ:0 "山西"
- SHX_KMT_social_conservative_DEF:0 "山西"
- SHX_KMT_authoritarian_democrat:0 "山西"
- SHX_KMT_authoritarian_democrat_ADJ:0 "山西"
- SHX_KMT_authoritarian_democrat_DEF:0 "山西"
- SHX_KMT_paternal_autocrat:0 "山西"
- SHX_KMT_paternal_autocrat_ADJ:0 "山西"
- SHX_KMT_paternal_autocrat_DEF:0 "山西"
- SHX_KMT_national_populist:0 "山西"
- SHX_KMT_national_populist_ADJ:0 "山西"
- SHX_KMT_national_populist_DEF:0 "山西"
- POLITICS_SHX_QIAO_JIACAI_DESC: "§Y领导人介绍\n生于：§!1906年4月3日，山西省义望村\n§Y政治生涯：§!乔家才从小就是个朝气蓬勃、才华横溢的爱国学生。18岁那年，也就是入学太原平民中学后不久，许多北京来的积极分子用孙中山及其三民主义为他带来了思想启蒙。1925年，他和其他学生一起组建了国民党交城县支部，不到一年后，他就离开家乡，南下前往黄埔军校。北伐战争如火如荼时，他潜返家乡组织起同志们，为国民党最终接管做准备。但是，国民党并没有到来，至少1927年那次没有。于是，乔家才和最亲密的战友们潜入地下，在交城组建了一个秘密情报小组，与军统合作。据说，乔家才是军统华北支部的长期负责人。近来，国民党东山再起，他被任命为山西省长。对他来说，这是几十年奋斗的证明，也是中国复兴势不可挡的证明。"
- SHX_zhongyuan_gov: "中原政府"
- SHX_zhongyuan_gov_ADJ: "中原"
- SHX_zhongyuan_gov_DEF: "中原政府"
- SHX_gmj_officer: "国民军将领"
- SHX_gmj_officer_desc: "§L该名将领隶属于冯玉祥的国民军。§!"
- SHX_yan_loyalist: "晋军将领"
- SHX_yan_loyalist_desc: "§L该名将领隶属于阎锡山的晋军。§!"
