--- a/localisation/KX_Guides_gui_l_simp_chinese.yml
+++ b/localisation/KX_Guides_gui_l_simp_chinese.yml
@@ -324,7 +324,7 @@
  guides.76.a:0 "哇哦"
  guides.76.b:0 "去第二页"
  guides.77.t:0 "俄社指南"
- guides.77.d:0 "问：我怎样才能重建苏联？\n答：选择俄罗斯社会主义共和国，然后选择季诺维也夫、朱可夫、克列斯廷斯基、加里宁、索科利尼科夫、加米涅夫、布拉贡拉沃夫、亚戈达、斯皮里多诺娃、布哈林、托姆斯基、什利亚普尼科夫、柯伦泰、基洛夫、沃尔斯基、格施泰因、利哈奇、詹德曼、伊万诺夫、洛佐夫斯基、阿布拉莫维奇、斯坦伯格、卡列林、菲什曼、特鲁托夫斯基、图哈切夫斯基、叶若夫，点外交国策，相关的决议就会出现。\n\n问：日丹诺夫路线/联合苏维埃社会主义共和国？\n答：建立俄罗斯社会主义共和国，大会上倾向人民社会党的李可夫，在事件里让李可夫成为领导人。李可夫将于1942年3月去世，日丹诺夫将接替他，国策开启。\n\n问：布尔什维克大会？\n答：在大会期间，可以通过决议来增加某些布尔什维克领导人的影响力。此外，会有一些事件显示那个选项会增加谁的影响力。\n\n问：但要是爷没有选到想要的人呢？\n答：一个有用的生活小技巧。把布拉贡拉沃夫的影响力提高到80%（同意给契卡打钱），你就可以解锁暗杀最多三名布尔什维克领导人的决议。如果你不打算游玩布拉贡拉沃夫，你也可以为自己的目的使用这个。你可以尝试暗杀3个布尔什维克领导人，如果他们的影响力大于你想选的人或者你单纯觉得某些人太屑。每一次暗杀，布拉贡拉沃夫暴露的机率就会增加，所以如果他被暴露了（一般最多3次），你也就摆脱了他。\n\n问：叶若夫？\n答：这个问题有点难。你必须先选择季诺维也夫：所以要确保他在苏维埃大会上获胜。在季诺维也夫的国策树上，在点“严肃党纪”的国策时，你将可以进行清洗。做三个清洗中的任何两个，或者直接通过军队清洗同时清洗图哈切夫斯基和朱可夫。在之后一个事件中，布拉贡拉沃夫可以被叶若夫取代，选择取代。25天后，当类似的事件出现时，不用阿格拉诺夫替换叶若夫，继续用叶若夫。在这之后的一段时间里，叶若夫将发动政变。\n\n问：现在我要怎么才能玩到卡冈诺维奇？\n答：让布布上台，并选举克列斯廷斯基，建立苏联，一段时间后他会退休，卡冈将上台。\n\n问：现在我要怎么才能玩到亚戈达？\n答：让布布上台，并选举布拉贡拉沃夫，完成所有军队清洗，你得到一个事件来替换他为亚戈达\n\n问：怎样才能玩布布和安人？\n答：打内战，选斯皮里多诺娃，不要逮捕布尔什维克，把莫斯科和下诺夫哥罗德让给敌人，如此，布尔什维克便会政变（此外，走红色将军线打赢内战也可以让其上台）。要走安人线的话，就镇压造反的农民，在事件“占领彼得格勒港”中选择采取守势。\n\n问：如何游玩伊德尔-乌拉尔？\n答：先按上面一条让布布上台，镇压农民起义后等一个月伊德尔-乌拉尔就会叛乱。"
+ guides.77.d:0 "问：我怎样才能重建苏联？\n答：选择俄罗斯社会主义共和国，然后选择季诺维也夫、朱可夫、克列斯廷斯基、加里宁、索科利尼科夫、加米涅夫、布拉贡拉沃夫、亚戈达、斯皮里多诺娃、布哈林、托姆斯基、什利亚普尼科夫、柯伦泰、基洛夫、沃尔斯基、格施泰因、利哈奇、詹德曼、伊万诺夫、洛佐夫斯基、阿布拉莫维奇、施泰因贝格、卡列林、菲什曼、特鲁托夫斯基、图哈切夫斯基、叶若夫，点外交国策，相关的决议就会出现。\n\n问：日丹诺夫路线/联合苏维埃社会主义共和国？\n答：建立俄罗斯社会主义共和国，大会上倾向人民社会党的李可夫，在事件里让李可夫成为领导人。李可夫将于1942年3月去世，日丹诺夫将接替他，国策开启。\n\n问：布尔什维克大会？\n答：在大会期间，可以通过决议来增加某些布尔什维克领导人的影响力。此外，会有一些事件显示那个选项会增加谁的影响力。\n\n问：但要是爷没有选到想要的人呢？\n答：一个有用的生活小技巧。把布拉贡拉沃夫的影响力提高到80%（同意给契卡打钱），你就可以解锁暗杀最多三名布尔什维克领导人的决议。如果你不打算游玩布拉贡拉沃夫，你也可以为自己的目的使用这个。你可以尝试暗杀3个布尔什维克领导人，如果他们的影响力大于你想选的人或者你单纯觉得某些人太屑。每一次暗杀，布拉贡拉沃夫暴露的机率就会增加，所以如果他被暴露了（一般最多3次），你也就摆脱了他。\n\n问：现在我要怎么才能玩到卡冈诺维奇？\n答：让布布上台，并选举克列斯廷斯基，建立苏联，一段时间后他会退休，卡冈将上台。\n\n问：现在我要怎么才能玩到亚戈达？\n答：让布布上台，并选举布拉贡拉沃夫，完成所有军队清洗，你得到一个事件来替换他为亚戈达\n\n问：怎样才能玩布布和安人？\n答：打内战，选斯皮里多诺娃，不要逮捕布尔什维克，把莫斯科和下诺夫哥罗德让给敌人，如此，布尔什维克便会政变（此外，走红色将军线打赢内战也可以让其上台）。要走安人线的话，就镇压造反的农民，在事件“占领彼得格勒港”中选择采取守势。\n\n问：如何游玩伊德尔-乌拉尔？\n答：先按上面一条让布布上台，镇压农民起义后等一个月伊德尔-乌拉尔就会叛乱。"
  guides.77.a:0 "哇哦"
  guides.79.t:0 "哥斯达黎加指南"
  guides.79.d:0 "问：哥斯达黎加的中美洲咖啡公司路线？\n\n答：走社民线，在决议的机制里提升中美洲咖啡公司影响力（在意识形态饼图中，中美洲咖啡公司是威民）。影响力超50%后，便可解锁中美洲咖啡公司的第一个国策。完成该国策中美洲咖啡公司就会发动政变。最后哥斯达黎加可以由奥古斯特·威廉（中美洲德意志帝国）/理事会（企业国家）统治。"
@@ -552,6 +552,10 @@
  guides.138.t:0 "埃及指南"
  guides.138.d:0 "问：社民/社自/市自/社保/威民线？\n答：进行法鲁克改革，选自由或保守的选项，不要选君主专制，最下面的三个国策要达成立宪君主制或半立宪君主制的结果。除社民线外，其它线路都可以在1936年大选中进入，社民线要等到41年的大选。\n\n问：法鲁克家独线？\n答：进行法鲁克改革，选择君主专制的选项，最下面的三个国策要达成绝对君主制的结果。之后法鲁克就会大权加身，进入家独线。\n\n问：穆兄会政变/埃及哈里发国？（国策树同穆兄会的威民线）\n答：大选选社自或社民，国策中点世俗主义，等一段时间会触发穆兄会激进化的事件，不理他们的话就会政变。\n\n问：共和国线？\n答：大选选社民、社自或市自，打赢开罗战争，等上个几周会进行公投。"
  guides.138.a:0 "哇哦"
+ NFL_guidesnum:0 "§C纽芬兰§!有§G4§!条路线指南。\n包括§O加拿大红线§!。"
+ guides.139.t:0 "纽芬兰指南"
+ guides.139.d:0 "问：红线？\n答：选择打压劳工运动、解决卡欣刺头，让科克同卡欣会面。要游玩加拿大红线的话，需要用红线纽芬兰打下加拿大，点“红色联盟”国策。\n\n问：米克马克线？\n答：先走红线，起义时接受原住民的援助，让权力平衡倒向英国一边，不要理会原住民的不满，让民众支持度小于五。\n\n问：民主线？\n答：不要让委任政府走向专制威权（同劳工运动协作、文官政府、不与圣约翰斯市长起争执），经济恢复后点“恢复民主”国策。\n\n问：加拿大红线？\n答：进入方法在上面。整个红线包括两条国策树，一条共通线，一条依据执政党变化的动态线。点“召开加拿大社会主义者代表大会”国策，在后续事件中一直选择支持的党派，之后再选择领导人，这样下面的国策就会动态发生变化。"
+ guides.139.a:0 "哇哦"
 
 
  guides.13.t:0 "两广指南"
