modified:   common/ideas/Shanxi_ideas.txt 	modified:   common/national_focus/Shanxi.txt 	modified:   events/Shanxi.txt 	modified:   localisation/KR_Shanxi_l_simp_chinese.yml

--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -649,6 +649,13 @@
  shx.earlygame.13.a:0 "告诉我这项计划的背景。"
  shx.earlygame.14.t:0 "十年计划的机制"
  shx.earlygame.14.d:0 "在玩法内容上，十年计划提供了山西早期游戏内容中的大部分内容（内政和军事国策树是剩下一部分）。十年计划的每项改革都是如下模式——完成一个国策将会出现新的决议，新决议将会提供一些背景介绍并允许你在两个方向中做出选择。同时还将启动一个决议倒计时，以反映山西在各项改革上取得的进展。国策树每个分支的“主要”部分都将提供一些围绕的附加国策，完成他们通常会提供一些加成，但更重要的是可以让你做出一些付更大代价来加快改革的抉择。这些国策并不是必须的，你也可以优先其他主要国策。但如果你想改革进度，就不得不选择他们，这样可以让山西更好地为未来的战争做好准备。另外请注意，在完成一个改革的重点分支后，许多加速改革的决议会立刻消失。\n\n该系统也与派系间的政治内容紧密相关。因为你选择的每个国策、决议或出现的事件都可能加强阎锡山或冯玉祥，并让他们最终大权在握，而决定权就在玩家手中。不过，在一段时间内维持两人的权力平衡可能更加有利——因为反对派会选择国策树分支另一侧的弱化版，提供一些加成。不过一旦一方彻底夺权，那么将不能再选择任何与其利益相左的国策（已经开始的不会被取消）。另外，当双方权力平衡尚未达到95%-100%时，双方发起对对方的清洗或是革命都会影响稳定性。\n\n北京的影响力是这个小游戏机制中的最后一个。北京如果有较高的影响力，则可以征用山西的民用工厂，但也会给山西提供强大的经济buff。对于早战玩家来说，最好避免北京的影响力过高。然而，那些寻求长期准备的玩家，可能北京带来的buff会很有用。鉴于直奉战争的不确定性以及山西本身资源的匮乏，时机的选择对于成功至关重要。"
+ shx.earlygame.15.t:0 "一省两军的命运"
+ shx.earlygame.15.yan.d:0 "第四次直奉战争于1928年收场，留下一地血腥，山西省军和国民军新近组建起一支联军，自此，吴佩孚将其专制统治延伸至山西的野望遭到了遏制。而联军同他们所保卫的领土和财富相比，实在臃肿得过分，不过依靠省内山河之险，联军最终还是迫使中央军铩羽而归。\n\n尽管曾共拒外敌，但阎锡山和冯玉祥都对彼此心里的长远盘算戒心满满，因此双方都没有认真打算过整合两家部队。大多数时候，国民军盘踞陕北，通过小作坊土造、从西安走私或盗窃，以及翻找二十年代旧军火库存货等渠道维持武器补充；晋军则经略山西老巢，一心守着太原兵工厂制枪造炮。\n\n如今国民军彻底土崩瓦解，我们终于有机会整编两军，将这支败军吸纳到一支更大的省军之中。而另一个选择是大批量接收国民军部队，整师整团地整合他们，大致保留其原有架构。"
+ shx.earlygame.15.yan.a:0 "一个中国，一支军队！"
+ shx.earlygame.15.yan.b:0 "何必修一个本来就好好的东西呢？"
+ shx.earlygame.15.feng.d:0 "第四次直奉战争于1928年收场，留下一地血腥，山西省军和国民军新近组建起一支联军，自此，吴佩孚将其专制统治延伸至山西的野望遭到了遏制。而联军同他们所保卫的领土和财富相比，实在臃肿得过分，不过依靠省内山河之险，联军最终还是迫使中央军铩羽而归。\n\n尽管曾共拒外敌，但阎锡山和冯玉祥都对彼此心里的长远盘算戒心满满，因此双方都没有认真打算过整合两家部队。大多数时候，国民军盘踞陕北，通过小作坊土造、从西安走私或盗窃，以及翻找二十年代旧军火库存货等渠道维持武器补充；晋军则经略山西老巢，一心守着太原兵工厂制枪造炮。\n\n如今晋军在我们阵前溃不成军，我们终于有机会整编两军。对待晋军我们有两种处理方法：一是吸纳愿意加入我们事业的士兵，并向他们灌输我们的意识形态；二是只撤换晋军高层，保留部队建制及基层军官职位，并选一位新督军节制晋军。"
+ shx.earlygame.15.feng.a:0 "中国军人，前进！"
+ shx.earlygame.15.feng.b:0 "最好不要自找麻烦。"
 
  shx.edu.0.t:0 "教育改革接近完成"
  shx.edu.0.d.yan:0 "尽管存在种种困难和反对声音，山西最终仍然成功完成了一切必要的技术突破，奠定了其十年计划的基础。他们的山西大学，山西国民师范学院以及各种技术学校（之前已经是腐败至极，烂到根子上了）现在也经过努力摆脱了从前的腐朽，一套崭新的，更强大的学校系统展现在了人们面前。无能又摆烂的教授被取代或是被改造，随之而来的是国外学者，国内技工和完美的学术氛围。学生则被一个棒槌一个甜枣地规训了起来。大学校园，虽然还是一个学生休闲的地方，但黑恶恶性事件数量已经显著减少。缺乏使用而长期关闭的校园图书馆已经重新开放，新一代学生们正在朝气蓬勃地为新山西与新中国之崛起而读书。教授和学者们的研究工作得到资助，他们很快就可以与北京乃至世界的科学家并肩而立。\n\n当然，山西仍然存在许多问题，主要是高等教育内部仍然存在着阶层间的不平等。虽然来自较低阶层的学生能获得奖学金，但绝大部分学生仍然来自较上层的阶级。但话说回来，没有人能否认山西相较于世纪初的境况来看已经好了太多，好日子还在后头呢！"
@@ -1042,6 +1049,8 @@
  SHX_dual_armies_desc:0 "在北伐战争及华北混战的末期，阎锡山和冯玉祥都试图夺取该地区的控制权，但均以失败告终。在吴佩孚在德国人的援助下确立了对华北的支配，而张作霖在日本人的支持下于东北开疆拓土之后，阎冯二人被迫接受了这盘残局——他们都流落到了一个崎岖且闭塞的地方。虽然双方兵力大致相等，但阎锡山在军队纪律性的建设上不如冯玉祥和他的国民军成功。然而阎锡山控制着强大的太原兵工厂，为他的军队提供了相对现代化的火炮加强。双方都在努力保护山西的自治权、使其不受中央政府侵犯上达成了一致，但他们都拒绝任何有助于整合双方军队的合作行为。这两支军队的开销也都不低——维持军队的花费已使得省库几近破产，这令双方都对此感到不安。这种不稳定的休战不禁让许多人怀疑这样的体制到底还能持续多久。"
  SHX_dual_armies2:0 "一省两军"
  SHX_dual_armies2_desc:0 "在北伐战争及华北混战的末期，阎锡山和冯玉祥都试图夺取该地区的控制权，但均以失败告终。在吴佩孚在德国人的援助下确立了对华北的支配，而张作霖在日本人的支持下于东北开疆拓土之后，阎冯二人被迫接受了这盘残局——他们都流落到了一个崎岖且闭塞的地方。\n\n虽然两军最初在指挥、供给和意识形态上有分歧，但最近几周双方达成了某种协议，即使他们仍然保留很大程度上的自主性。双方已经整合了彼此的高级指挥结构，军官之间也进行了一些交流。他们也强调对于[SHX.GetLeader]以及[SHX.GetName]的绝对忠诚。虽然双方传统仍不相同，下层官兵实际上也在为两支不同的军队效力，至少他们现在能够并肩作战了。不过，完全的整合仍需时日。"
+ SHX_integrated_army:0 "整合的军队"
+ SHX_integrated_army_desc:0 "在北伐战争及华北混战的末期，阎锡山和冯玉祥都试图夺取该地区的控制权，但均以失败告终。在吴佩孚在德国人的援助下确立了对华北的支配，而张作霖在日本人的支持下于东北开疆拓土之后，阎冯二人被迫接受了这盘残局——他们都流落到了一个崎岖且闭塞的地方。\n\n虽然两军最初在指挥、供给和意识形态上有分歧，但最近[SHX.GetLeader]战胜了他的敌人，这使其可以开展整合两军的艰巨任务了。部队被成建制地解散，而军官则被重新教育或遭到调遣，维持这些常备部队所需的补给链也被大大简化。为维持虚报兵员而设立的臃肿编制以及冗余开支均得以消除。说到底，人们都希望中国能实现一国一军。现在不展开这项工作，更待何时？"
  SHX_underdeveloped_mountain_economy:0 "落后的山区经济"
  SHX_underdeveloped_mountain_economy_desc:0 "多山、务农、贫穷的山西从多方面来看都与工业革命三竿子打不着——即便放在国内来比较也是如此。虽然身为中国最贫穷的省份之一，山西在阎锡山的领导下还是拥有了一段能够用于些许发展的和平时期。但是，省内经济仍然受省外的北京政府和省内可疑乡绅的高度影响。20世纪20年代，阎锡山曾竭力试图扭转贸易逆差并遏制恶性通胀，但如此多管齐下最多只是把农村建设弄成了半吊子工程。“模范省”的口号喊得震天响，但现实却不堪入目。很多人认为，“模范省”运动上马的大多数项目不过是用来粉饰“繁荣”以供外人消遣，而不是真心想改革。这观点是否正确就让我们拭目以待吧。"
  SHX_underdeveloped_mountain_economy0:0 "山区经济崩溃"
@@ -1292,7 +1301,7 @@
 
 #军事
  SHX_xin_shan_xi_jun_shi_gui_hua:0 "新山西军事发展规划"
- SHX_xin_shan_xi_jun_shi_gui_hua_desc:0 " "
+ SHX_xin_shan_xi_jun_shi_gui_hua_desc:0 "山西军队不仅仅有着晋绥军与国民军的划分，内部更是山头多起，难堪大用，我们必须要改变这一点，从根上开始，从武器到军员将士素质，要将山西的军队改造成一只强而有力的部队。"
  SHX_kuo_da_hou_qing:0 "改善后勤"
  SHX_kuo_da_hou_qing_desc:0 "在省内大多数道路都相当落后且我军没有补给系统的情况下，我们应该购入卡车以改善我们的后勤能力并确保部队能够在前线吃饱穿足。"
  SHX_tian_ran_ping_zhang:0 "天然屏障"
@@ -1304,7 +1313,7 @@
  SHX_bei_fang_huang_pu_yan:0 "山西陆军军官学校"
  SHX_bei_fang_huang_pu_desc:0 "[SHX_bei_fang_huang_pu_desc_loc]"
  SHX_bei_fang_huang_pu_feng_desc:0 "就像已故的孙中山先生在广东兴办的那所著名的军校一样，山西的将军们也希望能把他们的军事课程打造成“北方的黄埔”。山西的军事院校中所教授的理论将与国民党的理论相似，比如来自俄罗斯和工团主义国家的步兵战术。正是在这里，在中国的西北部，革命有望最终取得成功。"
- SHX_bei_fang_huang_pu_yan_desc:0 " "
+ SHX_bei_fang_huang_pu_yan_desc:0 "建立在保定的陆军军官学校是一所中国赫赫有名的军校，如今的北方各大军阀派系手中的中间力量军官或多或少都有在保定军校深造的经历。我们必须在太原修建一所能够与之媲美的军校，训练山西将士，只有这样才能让我们的军队更好的保家卫国。"
 
  SHX_yi_guo_min_jun_wei_shi:0 "以国民军为师"
  SHX_yi_guo_min_jun_wei_shi_desc:0 "在冯玉祥败于吴佩孚和张作霖之手后，他与国民军的老兵和残部逃到了山西。国民军是一支纪律严明的部队，他们因在战斗中和对平民的纪律良好而闻名全国。为了现代化山西省军，我们应该以他们的训练模式和纪律为榜样，建立真正专业的军队。"
