a 	modified:   common/ideas/Qing_ideas.txt 	modified:   common/national_focus/Hunan_Red.txt 	modified:   common/national_focus/Qing_Manchu.txt 	modified:   common/national_focus/Shanxi.txt 	modified:   common/scripted_guis/QD_biden_ui.txt 	modified:   common/scripted_localisation/QD_biden_ui_scripted_loc.txt 	modified:   common/scripted_triggers/Leader_GUI_scripted_triggers.txt 	modified:   common/scripted_triggers/QD_Leader_GUI_scripted_triggers.txt 	modified:   events/HNN1.txt 	modified:   events/Legation_Cities.txt 	modified:   events/Qing.txt 	new file:   gfx/interface/goals/SHX_mo_fan_sheng_feng_yuxiang.png 	new file:   gfx/interface/goals/SHX_quan_li_and_cai_fu.png 	new file:   gfx/interface/goals/SHX_shan_xi_wang.png 	new file:   gfx/interface/goals/SHX_yan_xi_shan_si_xiang.png 	modified:   interface/QD_biden_ui.gui 	modified:   interface/SHX_goals.gfx 	modified:   interface/SHX_goals_shine.gfx 	modified:   localisation/KR_Shang_Hai_l_simp_chinese.yml 	modified:   localisation/KR_Shanxi_l_simp_chinese.yml

--- a/localisation/KR_Shang_Hai_l_simp_chinese.yml
+++ b/localisation/KR_Shang_Hai_l_simp_chinese.yml
@@ -122,24 +122,25 @@
  LEC_GTT_W_ADJ: "苏维埃联盟"
  LEC_GTT_W_DEF: "苏维埃联盟" 
  
- SHC_hong_se_li_Lun: "红色理论家" 
- LEC_ming_yu_ling_xiu: "名誉领袖" 
- LEC_kang_sheng_hog: "康生" 
- LEC_wang_shou_hua_hog: "汪寿华" 
- LEC_lu_xun_hog: "鲁迅"
- LEC_zhou_yang_hog: "周扬"
- LEC_mei_jiu_hog: "景梅九"
- LEC_rao_shu_shi_hog: "饶漱石"
- LEC_peng_shu_zhi_hog: "彭述之"
- LEC_zhao_si_yan_for: "赵世炎"
- LEC_tian_han_eco: "田汉"
- LEC_mi_fu_hog: "帕维尔·米夫"
- LEC_wang_ming_eco: "王明"
- LEC_bo_gu_for: "博古"
- LEC_wang_min_hog: "王明"
- LEC_zhang_wen_tian_hog: "张闻天"
- LEC_liu_ren_jing_hog: "刘仁静"
- LEC_zheng_chao_ling_eco: "郑超麟"
+ SHC_hong_se_li_Lun:0 "红色理论家" 
+ LEC_ming_yu_ling_xiu:0 "名誉领袖"
+
+ LEC_kang_sheng_hog:0 "康生" 
+ LEC_wang_shou_hua_hog:0 "汪寿华" 
+ LEC_lu_xun_hog:0 "鲁迅"
+ LEC_zhou_yang_hog:0 "周扬"
+ LEC_mei_jiu_hog:0 "景梅九"
+ LEC_rao_shu_shi_hog:0 "饶漱石"
+ LEC_peng_shu_zhi_hog:0 "彭述之"
+ LEC_zhao_si_yan_for:0 "赵世炎"
+ LEC_tian_han_eco:0 "田汉"
+ LEC_mi_fu_hog:0 "帕维尔·米夫"
+ LEC_wang_ming_eco:0 "王明"
+ LEC_bo_gu_for:0 "博古"
+ LEC_wang_min_hog:0 "王明"
+ LEC_zhang_wen_tian_hog:0 "张闻天"
+ LEC_liu_ren_jing_hog:0 "刘仁静"
+ LEC_zheng_chao_ling_eco:0 "郑超麟"
 
  WANG_SHOU_HUA_DESC:0 "汪寿华，原名何纪元，曾用名何今亮，字介尘，中国浙江诸暨人。1917年秋，考入浙江省立第一师范学校，受五四运动和两广国民党影响，开始接触工团主义等左派思想。后出国多年，一边学习法语一边在法国参加工人运动教育。五卅惨案爆发后，因其富有工人运动的组织经验而被召回国内开展工人运动工作。在陈独秀的帮助下负责成立了上海总工会。在大革命失败期间，总工会转入租界，开始地下活动。期间使馆城市理事会多次想要查封总工会都被汪寿华化解，哪怕是1932年上海起义失败，总工会遭到重创，也没有完全解体。直到黑色星期一的冲击理事会崩溃，总工会在汪寿华的带领下夺取了上海政权。" 
  LU_XUN_DESC:0 "周树人，原名周樟寿，字豫山、豫亭，后改字豫才，但他更多的以笔名鲁迅为世人知晓，尽管他用过180多个笔名。鲁迅出生于浙江省绍兴府会稽县府城内东昌坊口，祖父周福清（1838—1904年），同治十年（1871年）进士，选翰林院庶吉士，江西金溪县知县，捐内阁中书。父亲周伯宜（1861—1896），秀才出身。因此在幼时，鲁迅更多的是接受传统中式教育。直到其祖父因科举舞弊入狱，周家家道中落，父亲周伯宜也重病在床。他因此谋生了学医的念头。\n\n1902年2月，二十岁的鲁迅赴日本，这一趟日本之行，彻底改变了他的人生轨迹。1906年鲁迅在医专课堂上观看老师播放的日俄战争的幻灯片，里面有中国人给沙俄当坐探，被日军逮捕以间谍罪枪毙砍头，大量本地中国人围观。鲁迅认识到“医学并非一件紧要事，凡是愚弱的国民，即使体格如何健全，如何茁壮，也只能做毫无意义的示众的材料和看客，病死多少是不必以为不幸的。所以我们的第一要著，是在改变他们的精神，而善于改变精神的是，我那时以为当然要推文艺。”决定弃医从文。1906年3月，医专作为大二生退学。告诉许寿裳：“我决计要学文艺了，中国的呆子，坏呆子岂是医学所能治疗的么？从此中国少了一位伟大的医生，而多了一位伟大的文学家。\n\n1918年，36岁的周树人首次用“鲁迅”为笔名，在《新青年》上发表中国史上第一篇用现代形式创作的短篇白话文小说《狂人日记》。一举奠定了其在中国文学史上的地位，此后又出版《呐喊》、《彷徨》等小说集；《热风》、《坟》、《华盖集》等杂文集；《朝花夕拾》、《野草》等散文集；也曾广泛的翻译了欧美、日本的小说。\n\n1930年3月2日下午2时左右，在鲁迅的牵头下成立了中国左翼作家联盟，但是由于鲁迅与左联内诸多成员意见不合，因此其大多数时候只是作为名誉领袖，实际事物由周扬处理。"
