--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -261,9 +261,9 @@
  SHX_radical_socialist:0 "国民军"
  SHX_radical_socialist_ADJ:0 "国民军"
  SHX_radical_socialist_DEF:0 "国民军"
- SHX_social_democrat:0 "山西"
- SHX_social_democrat_ADJ:0 "山西"
- SHX_social_democrat_DEF:0 "山西"
+ SHX_social_democrat:0 "国民军"
+ SHX_social_democrat_ADJ:0 "国民军"
+ SHX_social_democrat_DEF:0 "国民军"
  SHX_social_liberal:0 "山西"
  SHX_social_liberal_ADJ:0 "山西"
  SHX_social_liberal_DEF:0 "山西"
