--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -1377,13 +1377,13 @@
 #政治
  #阎锡山
  SHX_shan_xi_wang:0 "重返台前"
- SHX_shan_xi_wang_desc:0 " "
+ SHX_shan_xi_wang_desc:0 "终于，当晋绥军攻破了国民军最后一个据点后，山西省内的权力斗争画上了一个句点。在省议会的一致认可下，退居幕后多年的阎锡山将军重返大位，这位模范将领、模范督理，这位山西重新将山西牢牢的握在手里。他还有很多事要做，因为冯玉祥的存在，他做出了太多的妥协，现在，他要收回这一切，山西只能是山西人的山西，而中国，也只能是中国人的中国。"
  SHX_yan_xi_shan_si_xiang:0 "宣扬阎锡山思想"
- SHX_yan_xi_shan_si_xiang_desc:0 " "
+ SHX_yan_xi_shan_si_xiang_desc:0 "工团主义、联省主义等等，这些嘈杂的思想都无法拯救中国。只有三民主义，只有军国主义，只有将党派政治彻底碾碎，只有唤醒我们的传统精神，只有当全体国民凝聚成一股绳才能拯救我们的祖国。为了达成这个目的，省政府将不留余力的宣扬阎督理的政治哲学。"
  SHX_quan_li_and_cai_fu:0 "官僚大洗牌"
- SHX_quan_li_and_cai_fu_desc:0 " "
+ SHX_quan_li_and_cai_fu_desc:0 "在过去的时间里，冯玉祥也好、北京政府也好、又或是那些德国人他们都在不断的向省政府内掺沙子，对于这样的情况，退居二线的阎锡山只能睁一只眼闭一只眼。但是现在时代变了，重回大位的阎督理将以雷霆不及掩耳之势对政府内开刀，剔除那些无能不忠之人，让省政府从上到下凝聚在阎督理的身边。"
  SHX_ren_ming_xu_shi:0 "改革省政府"
- SHX_ren_ming_xu_shi_desc:0 " "
+ SHX_ren_ming_xu_shi_desc:0 "省政府内冗官冗员，效率极其低下，过去山西经济之所以多次濒临崩溃与低效率政府脱不开干系。伴随着官僚阵容的洗牌，省政府也需要精简机构，提升效率。同时这也必然将权力向他本人聚集。"
  SHX_jin_bu_ju:0 "改善社会福利"
  SHX_jin_bu_ju_desc:0 " "
  SHX_wei_hu_chuan_tong:0 "以民为先"
