--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -818,9 +818,9 @@
  shx.powerstruggle.10.d:0 "阎锡山督理对山西的长久统治终于被国民军的革命力量推翻。其残部要么被杀，要么藏了起来，要么被[SHX.GetLeader]招安，剩下的人也仓皇逃走。随着这位北方政坛中德高望重的巨头倒台，其部众已无处栖身。\n\n省军最有组织的残部已经撤往北京，以期找到伯乐。其中大多数人长期与阎锡山的“晋军”合作。如今阎锡山生死未卜，他们请求以同等的职务为中央政府服务。虽然其大多训练有素，很多人和我们的指挥官一样在保定军校求学过，但关于阎军腐败无能的传言也广为流传。"
  shx.powerstruggle.10.a:0 "他们是秩序的守护者。"
  shx.powerstruggle.10.b:0 "立刻逮捕这帮逃犯。"
- shx.powerstruggle.12.t:0 "国民军残部抵达"
- shx.powerstruggle.12.d:0 " "
- shx.powerstruggle.12.a:0 " "
+ shx.powerstruggle.12.t:0 "蟠桃"
+ shx.powerstruggle.12.d:0 "太原的街头上，贴满了对国民军残部的通缉令，虽然冯玉祥已经落网，杨虎城宣布切割，但是阎锡山督理对斩草除根这件事非常的执着。他加强了搜查力度，扬言：“让国民军反动分子葬身山西！”\n\n而在山西某处，几个人正对着一张中国地图沉思。良久，一个稍微年轻点的人开口了：“哲元，现在那老东西的爪牙在外面严查我们，我们下一步去哪里？”那位哲元先生吸了一口烟：“北京那边和阎老狗是一伙的，西边的马家军也不是什么好狗。按照地图上的信息来看，南京的控制者是国民党的汪精卫。我们同是国民革命军，他们应该会接纳我们。”\n\n这时，那个稍显头秃的人站起来：“对于这个建议，我是没有什么意见的，不过国民党内部混乱不堪。到时候记得别站队，明哲保身才是重要的。”“既然复渠都这么说了，那我们即日启程。”宋哲元讲完，立即准备动身。两个星期后，当张自忠等人站在南京城下的时候，汪精卫主席亲自出门迎接，为国民军众人安排了新的职位。并强调..."
+ shx.powerstruggle.12.a:0 "革命尚未成功，我们必须团结能团结的所有力量..."
 
  shx.QIE.aid.1.t:0 "太原火车谈判脱轨"
  shx.QIE.aid.1.d:0 "虽然华南铁路项目的成功让东亚总督监事会的声望如日中天，但他们在北方就没那么好运了。其在北京福公司的子公司已经和固执的山西督理阎锡山谈判了数月，而我们的代表在其中充当中间人。虽然他们在争取诸如山西省银行总经理王骧等政府要员的支持上取得了相当大的进展，但谈判最终还是陷入了停滞。\n\n阎锡山（在心怀反意的冯玉祥大帅怂恿下）选择退出谈判，拒绝对我方要求让步，即在东亚监事会援建铁路项目（注意，这是我们资助的）中使用标准轨距，而不是阎锡山指定的窄轨距。他指责我们不仅试图破坏其自主权，还计划以此让我军日后侵略山西变得更容易。\n\n且不论这种指控有多么骇人，谈判的破裂就是山西自本世纪初起就一直处于经济孤立状态的印证。山西曾是中国最富裕的省份之一，也是中国银行业和商业中心，却在军阀时代之初的剧变中落入了极端贫困的深渊。该地区之所以只在名义上隶属于我方政府，是因为吴佩孚直到20年代末也没法彻底驱逐阎锡山和冯玉祥。他们或许狂妄自大，但其实构不成太大威胁。不过这或许正是当前形势的反映——我军仍然占领着山西东部（这正在动摇山西政府的执政地位），双方关系因此持续紧张。"
@@ -1383,25 +1383,25 @@
  SHX_quan_li_and_cai_fu:0 "官僚大洗牌"
  SHX_quan_li_and_cai_fu_desc:0 "在过去的时间里，冯玉祥也好、北京政府也好、又或是那些德国人他们都在不断的向省政府内掺沙子，对于这样的情况，退居二线的阎锡山只能睁一只眼闭一只眼。但是现在时代变了，重回大位的阎督理将以雷霆不及掩耳之势对政府内开刀，剔除那些无能不忠之人，让省政府从上到下凝聚在阎督理的身边。"
  SHX_ren_ming_xu_shi:0 "改革省政府"
- SHX_ren_ming_xu_shi_desc:0 "省政府内冗官冗员，效率极其低下，过去山西经济之所以多次濒临崩溃与低效率政府脱不开干系。伴随着官僚阵容的洗牌，省政府也需要精简机构，提升效率。同时这也必然将权力向他本人聚集。"
+ SHX_ren_ming_xu_shi_desc:0 "省政府内冗官冗员，效率极其低下，过去山西经济之所以多次濒临崩溃与低效率政府脱不开干系。伴随着官僚阵容的洗牌，省政府也需要精简机构，提升效率。当然，同时这也必然导致权力将向他本人聚集。"
  SHX_jin_bu_ju:0 "改善社会福利"
- SHX_jin_bu_ju_desc:0 " "
+ SHX_jin_bu_ju_desc:0 "社会福利一直都是山西的薄弱环节，不论是工农、城市居民亦或是省议会议员都对如今省里的福利制度有所不满。尤其是工人们更是怨声载道，给了赤匪巨大的可渗透空间，针对这样的情况，阎锡山决定通过一系列法律来改善社会福利从而使山西人民更加支持省政府，也要让山西人民想象只有省政府能够让他们过上更好的生活。"
  SHX_wei_hu_chuan_tong:0 "以民为先"
- SHX_wei_hu_chuan_tong_desc:0 " "
+ SHX_wei_hu_chuan_tong_desc:0 "民生问题一直是山西的重中之重。想要解决掉民生问题就需要民众的信任。但由于之前那些政治家的作风以及经济问题导致民生问题没法解决，我们应当以人民为先把人民的幸福指数放在第一位这是最为重要的也是我们必须要做的。"
  SHX_tui_xing_ru_jia_si_xiang:0 "儒学复兴"
- SHX_tui_xing_ru_jia_si_xiang_desc:0 " "
+ SHX_tui_xing_ru_jia_si_xiang_desc:0 "尽管阎锡山是一个非常传统的人，他主张复兴传统以唤醒人民的文化自信。但是这并不意味这他对于传统全盘接受，对于三纲五常、捆小脚一类的陋习，他就完全无法接受。因此比起旧儒学，梁漱溟、熊十力、张君劢等人所倡导的新儒学更对他的胃口。新儒学所提倡的新儒学以旧儒学为基础并融合了部分西学，这非常符合阎锡山的思想体系，也因此阎锡山开始在山西广泛推崇新儒学。"
  SHX_ji_quan_sheng_fu:0 "集权省府"
- SHX_ji_quan_sheng_fu_desc:0 " "
+ SHX_ji_quan_sheng_fu_desc:0 "全省市政府内的反对派被洗清，政府部门也遭到了一番大刀阔斧的改造，一切的一切都使得省政府的权力更加牢固，没有一个下级政府能够违抗省政府的意志，也使得省内任何人都无对阎锡山的地位构成威胁，除非他自己退位。"
  SHX_shen_fen_ren_tong:0 "设立政治保卫局"
- SHX_shen_fen_ren_tong_desc:0 " "
+ SHX_shen_fen_ren_tong_desc:0 "如今的山西共有三个不同的情报机构：特警队、政训处和谍训处三个各有侧重但不统一的情报机构，为了将这三个部门统筹起来，阎锡山决定设立一个上级情报机构-——政治保卫局。这个统一的部门将发挥更大的价值。"
  SHX_yan_lun_tong_he:0 "言论统合"
- SHX_yan_lun_tong_he_desc:0 " "
+ SHX_yan_lun_tong_he_desc:0 "自由是有限度的，百姓必须明白并非所有的言论都是能够说出的，你所说的每一句话都是有代价的。那些为德国人摇旗呐喊的，那些宣扬激进思想的家伙将明白他们的好时代过去了，现在他们必须为自己的言论付出代价..."
  SHX_fa_tuan_jing_ji:0 "试行法团主义经济"
- SHX_fa_tuan_jing_ji_desc:0 " "
+ SHX_fa_tuan_jing_ji_desc:0 "多年来山西一直实行一种类似国家资本主义的经济体制，尽管过去不得已妥协向北京与柏林出卖了一部分经济权力，私有之分横行。但是这一切都将扭转回来，山西将接受统制经济改革，他希望通过以此来遏制商会势力。"
  SHX_qi_ye_gai_ge:0 "企业改革"
- SHX_qi_ye_gai_ge_desc:0 " "
+ SHX_qi_ye_gai_ge_desc:0 "随着经济的发展，企业改革也陆续提上了日程。现在山西省内的大部分企业均为私营企业，为了扩大政府在经济领域的管控，决定将关键部门企业重新开始国有化。同时，其他的私营企业也开始陆续实行公司制股份制。同时也设立企业监管委员会并对一些有大型商会创立的私营企业进行管控。"
  SHX_mo_shou_cheng_gui:0 "墨守成规的现代化"
- SHX_mo_shou_cheng_gui_desc:0 " "
+ SHX_mo_shou_cheng_gui_desc:0 "随着阎锡山省长在逐步按照自己的想法进行改革后，山西从各个领域开始注入新的活力。同时随着现代化项目的开发以及阎锡山思想的传播，山西也从各个方面开始变得更加繁荣。虽然在政治思想上阎锡山仍然墨守成规，但他的野心也越来越膨胀并开始为了统一全国做着充分的准备。"
 
  #冯玉祥
  SHX_feng_yu_xiang:0 "基督将军的归来"
