--- a/localisation/KR_Shanxi_l_simp_chinese.yml
+++ b/localisation/KR_Shanxi_l_simp_chinese.yml
@@ -620,8 +620,8 @@
  shx.earlygame.5.d:0 " "
  shx.earlygame.5.a:0 " "
  shx.earlygame.6.t:0 "夜谈"
- shx.earlygame.6.d:0 " "
- shx.earlygame.6.a:0 " "
+ shx.earlygame.6.d:0 "“次陇兄，兹事体大，还望您多加考虑呀！”\n“濬源，正是因兹事体大，我才说此时敲定为时尚早，不应操之过急。”模范省省会——太原城内一间不起眼的房屋中，二人争执之声在夜间虫鸣中稍显刺耳。在桌畔的二人是山西银行总经理王骧王濬源，在对面坐着的，正是当今山西省督理赵戴文。\n“你也知道，本省屡遭兵祸，近期方才恢复部分元气，这自给自足模范立省的旗帜正是当猎猎作声之时，你此时提出让京城来投资，不正是砸自己招牌，无异于在我们模范省的名号上自唾其面吗。你我同为晋商后民，祖宗如何自立自强、奋发不息，忘了？”\n“次陇兄，你我固然同为晋商晋人，然我必须提醒您，你我首先还是大清国人。如今朝廷抛来这橄榄枝，往好了说是敬重本省自治，但自治之上，仍有朝廷，不过因小失大，以自治为名抗命呀。如今朝廷与德国携手并进，共创繁荣，德国人给钱，咱们拿钱开厂，造福全省全国黎民百姓，这难道不是福泽众生之事？君不见北至大同南至晋城，我辈晋人正是在朝廷关怀之下，民生方得有如此进步？”\n赵戴文眼底划过一抹怒火，“这狗娘养的胆敢在我面前提起失陷的晋东六地“，一想晋东六地，这片与他操着相同口音的土地，一同他的家乡五台与他第一次接触佛法的五台山，都身处北京而非太原节制之下，他就似乎要丢掉佛经里的宽厚慈悲之道。王骧这厮天天跟在吴佩孚屁股后头，别的没学会，敲诈勒索的手段倒是突飞猛进。然而，北京终究是京城，如今的太原也仍尚未光复往日盛景。赵戴文挤出一个微笑：“也罢，濬源，我也是老糊涂，这点道理都想不通，还要靠你点醒，京城毕竟是贵人多啊。这样，今晚时候不早了，我明早肯定给你一个满意的答案。“说罢端起了茶杯。王骧眼中闪烁，顾不得赵戴文话中带刺，起身连声告辞，飞也似的走出了房间。\n“呸，一条狗！你等着吧，数典忘祖的东西。”“罢了赵师，时局如此，我等也如今无可奈何啊。”阎锡山的声音在屏风后响起，明明只有一层屏风，他的声音却仿佛来自遥远的过去或是未来。“你说，咱们真就这么遂了他的愿？”“时局如此，时局如此啊。不积跬步，无以至千里。赵师，这个道理也是你教给我的。近期各地异动不断，我看朝廷也是蓄势待发，此时还是宜暂避锋芒。”阎锡山的目光向东望去，那边是晋东六地，更是北京所在之处。“这笔买卖还不算完，孰盈孰亏，还在后头呢。”"
+ shx.earlygame.6.a:0 "君子报仇..."
  shx.earlygame.7.t:0 "冯玉祥提出向国民军划拨更多经费"
  shx.earlygame.7.d:0 "阎锡山保住了山西的自治权，这令冯玉祥喜出望外，亲自提议要在下一次会面上做东家。至于会面的话题，则是一件二人耳熟能详，但聊起来却谈不上愉快的事：军费开支。一支强大的军队是山西防卫的关键，也是八年前把吴佩孚挡在山西门外的制胜法宝。然而，对于山西这样一个贫穷省份而言，供养一支军队就已近极限，更别说两支了。虽然人人都从联盟的角度出发讨论阎冯的实力，但二人实际上均各自保有军队，即山西省军和国民军。\n\n为节省军费开支，自三十年代初起，两支军队的规模都遭受了削减。阎锡山和冯玉祥秉持军队服务百姓的理念，派遣士兵参与公共工程，偶尔也要求他们务农。此举看似无可挑剔，但在粉饰的表面之下，无数士兵早已心怀不满，军队素质在过去六年中也持续恶化。阎冯二人心知肚明，两支军队间的分歧是导致效率低下的元凶，但无论哪一方都不愿在主导权问题上做出让步。话虽如此，由于资金匮乏，外加局势并未生变，双方大概率会将争论暂时体面地搁置，转而处理其他事务。"
  shx.earlygame.7.a:0 "我山西百废待兴，力有不逮啊。"
@@ -954,13 +954,6 @@
  shx.409.t:0 "大清行省"
  shx.409.d:0 "由于对宣统维新的支持，山西省长阎锡山开始自称“山陕总督”，并改挂大清的省旗以示对北京新政府的支持。"
  shx.409.a:0 "很好！"
-
- SHX_power_struggle:0 "阎冯之争"
- SHX_legacy_of_guominjun:0 "国民军遗风"
- SHX_legacy_of_guominjun_desc:0 "晋军的许多官兵都是冯玉祥手下的原国民军部将。虽然这让晋军更加负有盛名并且带来了战斗经验，但也让彻底清除冯玉祥在军队中的势力变为了一项不可能完成的任务。"
- SHX_more_imports_idea:0 "扩大进口"
- SHX_rural_economy:0 "乡村经济"
- SHX_construction_investments:0 "投资建设"
 
  SHX_neutrality:0 "山西中立政策"
  SHX_neutrality_desc:0 "山西群山环绕，周围的邻居都与其关系紧张，因此其领导层在政治和外交上深陷孤立主义。讽刺的是，在直系的惨胜下，正是山西高层这种长期闭关自守的心态给了他们一线生机。但是，这种地方主义也让人民对任何向外的干涉都不感兴趣，如果阎冯的志向不限于太原，就需要用一个共同的愿景来团结人民。"
